# virp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.ipynb_checkpoints/: setup-checkpoint.py
Virp/.ipynb_checkpoints/: __init__-checkpoint.py
database_demo/: Postprocessing Demo.ipynb  database.csv
dft-shells/: INCAR-relag  INCAR-relag-low  INCAR-te  INCAR-te-soc  calcbatch.sh  checkrelag.sh  continuation.sh  relag.pbs  tailoutput.sh  te-soc.pbs  te.pbs  totalenergy.sh
session/: connectivity.py  generate.py  properties.py
tests/: Ca2Al2SiO7_supercell.cif  Ca2Al2SiO7_supercell_virtual.cif  test.ipynb
virp/: __init__.py  database.py  enumerate.py  main.py  matprop.py  relax.py
virp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
