[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virp"
version = "0.2.2"
description = "VIRtual cell generation by Permutation"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Andy Paul Chen", email = "la.vache.qui.vit@gmail.com"}
]
dependencies = [
    "pymatgen==2024.10.22"
]
keywords = ["disordered", "virtual cell", "cif"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
