[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virp"
version = "0.3.0"
description = "VIRtual cell generation by Permutation"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Andy Paul Chen", email = "la.vache.qui.vit@gmail.com"}
]
dependencies = [
    "pymatgen",
    "chgnet",
    "matgl==1.0.0",
    "dgl==1.1.2"
]
keywords = ["disordered", "virtual cell", "cif"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
